traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:14: error: ';' expected but 'for' found.
}for (i<-1 to 6){
 ^